<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/ic_user"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/txt_idUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ID"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/edt_correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ID_hint"
        android:inputType="textEmailAddress"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/txt_contrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Password"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/edt_contrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Password_hint"
        android:inputType="textPassword"
        android:textSize="25sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_Registrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/btn_register"/>

        <Button
            android:id="@+id/btn_Iniciar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/btn_login"
            android:layout_marginStart="20dp" />

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>