<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.contacto.CotactoFragment">

    <TextView
        android:id="@+id/tv_Contacto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Contacto"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_Llamar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_call"
        app:icon="@drawable/ic_call" />

    <Button
        android:id="@+id/btn_Correo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_send"
        app:icon="@drawable/ic_mail" />

</androidx.appcompat.widget.LinearLayoutCompat>